Mon Nov 11 17:03:16 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdb_cpw.c (cleanup_key_data): fix memory leak [krb5-kdc/163]
	(add_key_pwd): fix memory leak [krb5-kdc/164]

Sat Nov  9 15:57:50 1996  Ezra Peisach  <epeisach@mit.edu>

	* t_krb5.conf: Dummy krb5.conf file from the krb5 library. 

	* Makefile.in (check): Set KRB5_CONFIG to a valid krb5.conf file.

	* t_kdb.c (do_testing): Check return value from krb5_init_context.

Thu Oct 31 11:10:56 1996  Ezra Peisach  <epeisach@trane.rose.brandeis.edu>

	* Makefile.in (t_kdb): Link with $(TOPLIBD)/libdb.a

Wed Sep  4 19:29:57 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (t_kdb): Fix up dependencies of t_kdb so it will
		build on non-shared architectures; also ensure that libs
		get linked after the objects.

Fri Aug 23 16:34:45 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (t_kdb): Fix Makefile so that t_kdb is linked
	 	correctly with the appropriate libraries.

Thu Aug 22 16:22:01 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdb_dbm.c: Remove vestigal code which was using BERK_DB_DBM
		define.  Still need to remove kludgey database "switch"
		code and recode to use the db interface.

	* t_kdb.c: Update t_kdb to use the new libkdb interface.

Mon Aug 12 14:11:29 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdb_dbm.c (krb5_dbm_db_rename): rename should not insist that
 	the target database not already exist

Fri Aug  9 15:21:34 1996  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* Makefile.in (shared): Convert shared:: to shared: so will not
		always be called upon. 

Thu Aug  8 20:26:47 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (shared): Always mkdir shared; test -d shared ||
		mkdir shared breaks under Ultrix sh (grrr...).

Thu Aug  8 18:29:15 1996  Sam Hartman  <hartmans@mit.edu>

	* keytab.c (krb5_ktkdb_get_entry): Return KRB5_KT_NOTFOUND if the
 	principal doesn't exist instead of dereferencing a null pointer.

Fri Aug  2 14:08:03 1996  Sam Hartman  <hartmans@mit.edu>
